--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -11,6 +11,7 @@ html {
 body {
   font-size: 1.6rem;
   font-family: Gordita, sans-serif;
+  color: var(--text-color);
 }
 
 a {
@@ -23,4 +24,16 @@ button {
   outline: none;
   background-color: transparent;
   cursor: pointer;
+}
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  color: inherit;
+}
+
+.icon {
+  filter: var(--icon-color);
 }
