--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,10 +1,14 @@
+%flexItemsCenter {
+  display: flex;
+  align-items: center;
+}
+
 .header {
-  background-color: #eee;
+  background-color: var(--header-bg-color);
 }
 
 .top-bar {
-  display: flex;
-  align-items: center;
+  @extend %flexItemsCenter;
   padding: 30px 0;
 }
 
@@ -13,13 +17,12 @@
   margin-right: auto;
 
   &__list {
-    display: flex;
-    align-items: center;
+    @extend %flexItemsCenter;
     gap: 30px;
   }
 
   &__link {
-    display: flex;
+    @extend %flexItemsCenter;
     gap: 6px;
 
     font-size: 1.5rem;
@@ -33,19 +36,17 @@
 }
 
 .top-act {
-  display: flex;
-  align-items: center;
+  @extend %flexItemsCenter;
   gap: 20px;
 
   &__group {
-    display: flex;
-    align-items: center;
+    @extend %flexItemsCenter;
     min-width: 50px;
     height: 50px;
 
     border-radius: 8px;
-    background: #fff;
-    box-shadow: 0px 20px 60px 10px rgba(237, 237, 246, 0.2);
+    background: var(--top-act-group-bg-color);
+    box-shadow: 0px 20px 60px 10px var(--top-act-group-shadow);
   }
 
   &__group--single &__btn {
@@ -53,8 +54,7 @@
   }
 
   &__btn {
-    display: flex;
-    align-items: center;
+    @extend %flexItemsCenter;
     gap: 10px;
     padding: 10px 20px;
   }
@@ -78,6 +78,7 @@
 
     border-radius: 8px;
     background-color: #dfd2fa;
-    box-shadow: 0px 4px 14px 2px rgba(0, 0, 0, 0.08);
+    box-shadow: 0px 4px 14px 2px var(--top-act-avatar-shadow);
+    cursor: pointer;
   }
 }
